--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.api.ramsha.myapplication">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -14,7 +13,7 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".gridview.GridView"
+            android:name=".CustomThemes"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +22,13 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".gridview.GridView"
+            android:exported="true">
+
+        </activity>
+        <activity
             android:name=".listview.ListView"
-            android:exported="false"/>
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="false" />
